# TKOM-projekt

./: README.md  lang_with_units.cpp  lang_with_units.vcxproj  lang_with_units.vcxproj.filters
examples/: representativeExample.txt
lang_with_units/: lang_with_units.cpp  lang_with_units.sln  lang_with_units.vcxproj  lang_with_units.vcxproj.filters  lexer.cpp  lexer.h  parser.cpp  parser.h  source.cpp  source.h  test_-_err_id.lwu  test_-_err_num.lwu  test_-_err_unit.lwu  test_-_errors.lwu  test_-_no_err.lwu
src/: CMakeLists.txt  commonElements.h  interpreter.cpp
src/ast/: AdditiveExprNode.cpp  AdditiveExprNode.h  AndExprNode.cpp  AndExprNode.h  ArgNode.cpp  ArgNode.h  AssignmentNode.cpp  AssignmentNode.h  AstNode.cpp  AstNode.h  CMakeLists.txt  CharStringNode.cpp  CharStringNode.h  ConstantNode.cpp  ConstantNode.h  ElseBlockNode.cpp  ElseBlockNode.h  ExpressionNode.cpp  ExpressionNode.h  FunCallNode.cpp  FunCallNode.h  FunDefNode.cpp  FunDefNode.h  IdNode.cpp  IdNode.h  IfBlockNode.cpp  IfBlockNode.h  IfStatementNode.cpp  IfStatementNode.h  MultiplicativeExprNode.cpp  MultiplicativeExprNode.h  OppExprNode.cpp  OppExprNode.h  OrExprNode.cpp  OrExprNode.h  PrintCallNode.cpp  PrintCallNode.h  ProgramNode.cpp  ProgramNode.h  RelExprNode.cpp  (+9 more)
src/ast/astTests/: pch.h  test.cpp
src/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h
src/lexer/lexerTests/: pch.h  test.cpp
src/parser/: CMakeLists.txt  Parser.cpp  Parser.h
src/parser/parserTests/: CMakeLists.txt  pch.h  test.cpp
