set(SOURCES
  "${CMAKE_CURRENT_SOURCE_DIR}/AdditiveExprNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/AdditiveExprNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/AndExprNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/AndExprNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/ArgNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/ArgNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/AssignmentNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/AssignmentNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/AstNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/AstNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/CharStringNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/CharStringNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/ConstantNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/ConstantNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/ElseBlockNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/ElseBlockNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/ExpressionNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/ExpressionNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/FunCallNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/FunCallNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/FunDefNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/FunDefNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/IdNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/IdNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/IfBlockNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/IfBlockNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/IfStatementNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/IfStatementNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/MultiplicativeExprNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/MultiplicativeExprNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/OppExprNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/OppExprNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/OrExprNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/OrExprNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/PrintCallNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/PrintCallNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/ProgramNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/ProgramNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/RelExprNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/RelExprNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/ReturnStatementNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/ReturnStatementNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/VarDeclNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/VarDeclNode.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/Variable.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/Variable.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/WhileStatementNode.h"
  "${CMAKE_CURRENT_SOURCE_DIR}/WhileStatementNode.cpp"
)

add_subdirectory(astTests)
get_directory_property(
  SOURCES_astTests DIRECTORY astTests DEFINITION SOURCES
)